apps/orbit/orbit-docs-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: orbit-docs
  annotations:
    external-dns.alpha.kubernetes.io/hostname: orbit-docs.hoytlabs.app
spec:
  parentRefs:
    - name: gateway-external
      namespace: gateway
  hostnames:
    - orbit-docs.hoytlabs.app
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: orbit-docs
          port: 3002
          weight: 1
